--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ShoppingApp</string>
+    <string name="facebook_app_id">311796857528042</string> 
+    <string name="fb_login_protocol_scheme">fb311796857528042</string>
 </resources>
+
